Fix quiz buttons positioning on mobile to avoid overlap

--- a/src/components/QuizReaction/styles.module.scss
+++ b/src/components/QuizReaction/styles.module.scss
@@ -175,6 +175,21 @@
     right: 40px !important;
     top: 290px !important;
   }
+
+  @media (max-width: 768px) {
+    &.prevBtn {
+      left: 10px !important;
+    }
+
+    &.nextBtn {
+      right: 10px !important;
+    }
+
+    &.refreshBtn {
+      right: 10px !important;
+      top: 15% !important; // Move refresh button higher on mobile results to avoid overlap
+    }
+  }
 }
 
 @media (min-width: 769px) {
@@ -200,8 +215,8 @@
 
 @media (max-width: 768px) {
   .container {
-    padding-left: 70px;
-    padding-right: 80px;
+    padding-left: 80px;
+    padding-right: 90px;
   }
 
   .prevBtn {
@@ -229,8 +244,8 @@
 
 @media (max-width: 480px) {
   .container {
-    padding-left: 55px;
-    padding-right: 65px;
+    padding-left: 70px;
+    padding-right: 80px;
   }
 
   .prevBtn {
